# CAFrender

./: .gitignore  CMakeLists.txt  math.cu
include/: camera.h  models.h  scene.h
src/: camera.cpp  test
src/rendere/cuda/: template.cu
